# pro11

./: .env  .env.docker.example  .env.example  .env.private  .env.private.example  .env.safety  .gitignore  DEV_SETUP.md  Dockerfile  METRICS.md  Makefile  PROTOCOL_REALTIME.md  README.docker.md  README.local.md  README.md  RUNBOOK.md  SSH_DEPLOY_TROUBLESHOOTING.md  alembic.ini  db_check.py  debug_ssh.md  docker-compose.dev.deploy.yml  docker-compose.dev.override.yml  docker-compose.dev.watch.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  feedparser.py  hist_after1.json  hist_before1.json  hist_default.json  hist_false.json  history.json  meta.json  news_hash_buffer.txt  pyproject.toml  pytest.ini  requirements-dev.txt  setup_ssh_for_github.sh
.githooks/: pre-commit
backtester/: README.md  pyproject.toml  run_backtest.py
backtester/backtester/: cli.py  engine.py
backtester/sample_data/: fills_toy.csv  out_bundles.csv  out_events.csv  out_trades.csv  toy.csv
backtester/sbtester/: __init__.py  cli.py  engine.py
backtester/tests/: test_engine_basic.py
bench/: ohlcv_bench.py
docs/: TODO.md  api_validation.md  bottom_model_design.md  calibration_and_labeling_guide_ko.md  cicd.md  exit_policy_design.md  grafana_calibration_dashboard.json  grafana_news_dashboard.json  ko_ops_guide.md  labels.md  ml_signals_quickstart.md  news_backend_extension_plan.md  news_endpoints.md  news_granular_tasks.md  news_observability_plan.md  news_performance_plan.md  news_security_reliability_plan.md  news_ux_plan.md  ohlcv_chart_backend_design.md  ohlcv_chart_frontend_stack.md  ohlcv_chart_test_quality_strategy.md  ohlcv_indicator_module_design.md  ohlcv_streaming_strategy.md  sentiment_api.http  sentiment_endpoints.md  trading_signals.md
frontend/: .dockerignore  .env.development  .env.example  Dockerfile  README.md  eslint.config.js  index.html  (+8 more)
(+389 files in other folders)
