[tool.poetry]
name = "xrp-trading-system"
version = "0.1.0"
description = "Automated intraday XRP trading system backend"
authors = ["Trader <trader@example.com>"]
packages = [
    { include = "backend" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.111.0"
uvicorn = {extras=["standard"], version="^0.30.0"}
asyncpg = "^0.29.0"
aiohttp = "^3.9.5"
pydantic = "^2.6.4"
python-dotenv = "^1.0.1"
prometheus-client = "^0.20.0"
SQLAlchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg = {version = "^3.1.19", extras=["binary"]}
numpy = {version = "^1.26.4"}
pandas = {version = "^2.2.2", optional = true}
torch = {version = "^2.2.0", optional = true}
pytorch-lightning = {version = "^2.2.1", optional = true}
scikit-learn = {version = "^1.4.2"}
stable-baselines3 = {version = "^2.3.0", optional = true}
feedparser = "^6.0.11"

[tool.poetry.extras]
training = ["numpy", "pandas", "torch", "pytorch-lightning", "scikit-learn", "stable-baselines3"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
ruff = "^0.4.4"
mypy = "^1.10.0"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
